# cdat

./: .gitignore  .gitmodules  README.md
include/: Alphabet.hpp  Counter.hpp  Index.hpp  IndexBitVector.hpp  IndexPerm.hpp  IndexWaveletTree.hpp  Permutation.hpp  RevPermutation.hpp  cdat.hpp
include/libcds/: cppUtils.h  libcdsBasics.h  libcdsBitString.h
src/: Alphabet.cpp  CMakeLists.txt  Index.cpp  IndexBitVector.cpp  IndexPerm.cpp  IndexWaveletTree.cpp  cdat.cpp  cdat_build.cpp  cdat_check.cpp
tools/: CMakeLists.txt
tools/generate_patterns/: CMakeLists.txt  generate_pattern.cpp
tools/replace_dna/: CMakeLists.txt  replace_dna.cpp
